@startuml
'https://plantuml.com/class-diagram

abstract class Employee
class BaseEmployee
class CommissionEmployee
class HourlyEmployee
class SalariedEmployee


Employee <|-- BaseEmployee
Employee <|-- CommissionEmployee
Employee <|-- HourlyEmployee
Employee <|-- SalariedEmployee

abstract class Employee {
# firstName:String
# lastName:String
# socialSecurityNumber:String
+ Employee()
# Employee(firstName: String,lastName: String,socialSecurityNumber: String)
+setFirstName(firstName: String): void
+setLastName(lastName: String): void
+setSocialSecurityNumber(socialSecurityNumber: String): void
+getFirstName(): String
+getLastName(): String
+getSocialSecurityNumber(): String
+toString(): String
}
class BaseEmployee{
# baseSalary: int
+BaseEmployee(firstName: String,lastName: String,SSN: String,baseSalary: int)
+setBaseSalary(int baseSalary): void
+getBaseSalary(): int
+toString(): String
}
class CommissionEmployee{
#double commissionRate
#int grossSalary
+ CommissionEmployee(firstName: String,lastName: String,socialSecurityNumber: String,commissionRate: double,grossSalary: int)
+setCommissionRate(double commissionRate): void
+ setGrossSalary(int grossSalary): void
+ getCommissionRate(): double
+ getGrossSalary(): int
+ toSting(): String
}
class HourlyEmployee{
#  wage: int
#  hoursWorked: int
+ HourlyEmployee(firstName: String, lastName: String, socialSecurityNumber: String,wage: int,hoursWorked: int)
+setWage(int wage): void
+ setHoursWorked(int hoursWorked): void
+getWage(): int
+getHoursWorked(): int
+toString(): String
}
class SalariedEmployee{
#  weeklySalary: int
+ SalariedEmployee(firstName: String, lastName: String, socialSecurityNumber: String,weeklySalary: int)
+setWeeklySalary(weeklySalary: int): void
+getWeeklySalary(): int
+toString(): String
}


@enduml